--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "axios": "^1.7.7",
     "expo": "~52.0.10",
     "expo-status-bar": "~2.0.0",
     "p2-pdm": "file:",
